Updated days and js

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   </div>
 
   <div class="weather-hero">
-    <img src="img/sunny-sollaryo.png" alt="Sunny Character Design">
-      <p> LOTS OF SUNSHINE VITAMIN BABY!</p>
+    <!-- <img src="img/sunny-sollaryo.png" alt="Sunny Character Design">
+      <p> LOTS OF SUNSHINE VITAMIN BABY!</p> -->
   </div>
   
   <div class="metrics">
